--- a/estilos/style.css
+++ b/estilos/style.css
@@ -248,13 +248,13 @@ h1 {
         padding: 0 5%;
         width: 90%;
         margin: 0 auto;
-        gap: 32px;
+        gap: 16px;
     }
 
     .text__content {
         width: 100%;
         text-align: center;
-        margin-bottom: 40px; /* aqui está a margem extra */
+        margin-bottom: 40px;
     }
 
     .text__content .btn {
